--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </head>
     <body>
+        <input type="text" id="input"/>  
+     <button ondblclick="add()">adicionar</button> 
+     <ul id="list"></ul>
         <header>
             <a href="#">Home</a>
             <nav class="menu">
